@@ -555,6 +555,7 @@ include_once('include/page_header.php');
 				'select_items' => API_OUTPUT_EXTEND,
 				'select_functions' => API_OUTPUT_EXTEND,
 				'select_dependencies' => API_OUTPUT_EXTEND,
+				'expandDescription' => 1,
 			);
 			$triggers = CTrigger::get($options);
 			order_result($triggers, $sortfield, $sortorder);
@@ -582,7 +583,7 @@ include_once('include/page_header.php');
 					}
 				}
 
-				$description[] = new CLink(expandTriggerDescription($trigger), 'triggers.php?form=update&triggerid='.$triggerid);
+			$description[] = new CLink($trigger['description'], 'triggers.php?form=update&triggerid='.$triggerid);
 
 		//add dependencies {
 				$deps = $trigger['dependencies'];
